# robotics

./: README.md
ex01/: .bashrc  commands.txt
ex01/fullname_msg_srv/: package.xml
ex01/service_full_name/: package.xml  setup.py
ex01/service_full_name/service_full_name/: client_name.py  service_name.py
ex02/: pose_speed_x1.yaml  pose_speed_x2.yaml
ex02/turtle_cmd_vel/: metadata.yaml  turtle_cmd_vel_0.mcap
ex03/: doctor.txt
ex03/my_package/: package.xml  setup.py
ex04/: colcon_build.txt
ex04/move_to_goal/: package.xml  setup.py
ex04/move_to_goal/move_to_goal/: move_to_goal.py
ex05/: rosnode_info.txt  rosnode_list.txt
ex05/action_cleaning_robot/: CMakeLists.txt  package.xml
ex05/action_cleaning_robot/action/: CleaningTask.action
ex05/action_cleaning_robot/action_cleaning_robot/: cleaning_action_client.py  cleaning_action_server.py
ex06/: cmd_vel.txt
ex07/: parameter_server.txt
ex08/: rqt_console.csv  three_turtles.py
ex09/fullname_msg_srv/: CMakeLists.txt
ex09/fullname_msg_srv/srv/: SummFullName.srv
ex09/fullname_msgs/: package.xml  setup.cfg  setup.py
ex10/my_turtle_pkg/: package.xml  setup.py
ex10/my_turtle_pkg/my_turtle_pkg/: text_to_cmd_vel.py
